[package]
name = "dd_background"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"

rbatis = { version = "4.5.48" }
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
log = "0.4.24"
serde_json = "1.0.135"
rbs = "4.5.24"
rbdc-pg = "4.5.17"
fast_log = "1.7.6"
serde = { version = "1.0.217", features = ["derive"] }
